--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                             <a href="./page.html" class="sub_title">Caffebene</a>
                             <ul class="depth2">
                                 <li><a href="./page.html">카페베네소개</a></li>
-                                <li><a href="#">커피스토리</a></li>
-                                <li><a href="#">세계속의 카페베네</a></li>
+                                <li><a href="./page.html">커피스토리</a></li>
+                                <li><a href="./page.html">세계속의 카페베네</a></li>
                             </ul>
                         </li>
                         <li>
@@ -63,10 +63,10 @@
                             <ul class="depth2">
                                 <li><a href="./menu.html">신메뉴</a></li>
                                 <li><a href="./menu.html">커피</a></li>
-                                <li><a href="#">음료&차</a></li>
-                                <li><a href="#">디저트</a></li>
-                                <li><a href="#">베이글</a></li>
-                                <li><a href="#">상품</a></li>
+                                <li><a href="./menu.html">음료&차</a></li>
+                                <li><a href="./menu.html">디저트</a></li>
+                                <li><a href="./menu.html">베이글</a></li>
+                                <li><a href="./menu.html">상품</a></li>
                             </ul>
                         </li>
                         <li>
@@ -167,10 +167,10 @@
         </div>
         <ul id="item_list">
             <li><a href="./menu.html"><img src="./images/s2_coffee.jpg" alt="커피"></a></li>
-            <li><a href="#"><img src="./images/s2_bt.jpg" alt="음료&차"></a></li>
-            <li><a href="#"><img src="./images/s2_dessert.jpg" alt="디저트"></a></li>
-            <li><a href="#"><img src="./images/s2_bagel.jpg" alt="배이글"></a></li>
-            <li><a href="#"><img src="./images/s2_mdp.jpg" alt="상품소개"></a></li>
+            <li><a href="./menu.html"><img src="./images/s2_bt.jpg" alt="음료&차"></a></li>
+            <li><a href="./menu.html"><img src="./images/s2_dessert.jpg" alt="디저트"></a></li>
+            <li><a href="./menu.html"><img src="./images/s2_bagel.jpg" alt="배이글"></a></li>
+            <li><a href="./menu.html"><img src="./images/s2_mdp.jpg" alt="상품소개"></a></li>
         </ul>
     </section>
     <!-- 파트너십 안내 -->
