--- a/index.html
+++ b/index.html
@@ -110,17 +110,18 @@
     <!-- 메인배너 -->
     <section id="main_banner">
         <div class="slider">
-            <img src="./images/main_banner01.jpg" alt="배너1" class="show">
+            <img src="./images/main_banner01.jpg" alt="배너1">
             <img src="./images/main_banner02.jpg" alt="배너2">
             <img src="./images/main_banner03.jpg" alt="배너3">
             
             <div class="indicator">
-                <a class="show" href="#"><i class="fas fa-circle"></i></a>
-                <a href="#"><i class="fas fa-circle"></i></a>
-                <a href="#"><i class="fas fa-circle"></i></a>
+                <a id="in01" href="#">1</a>
+                <a id="in02" href="#">2</a>
+                <a id="in03" href="#">3</a>
             </div>
         </div>
     </section>
+    
 
     <!-- 공지사항 및 이벤트안내 -->
     <section id="main_info">
