--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style1.css">
     <link rel="stylesheet" href="./css/index_slider.css">
+    <link rel="stylesheet" href="./css/popup_style.css">
     <!-- jQuery -->
     <script src="./js/jquery-3.4.1.min.js"></script>
     <!-- 사용자 자바스크립트 -->
@@ -26,13 +27,13 @@
         <nav id="lnb">
             <ul>
                 <li><a href="#">Login 
-                    <img src="./images/login.png" alt="로그인" class="lnb_icon">
-                </a>
-            </li>
+                        <img src="./images/login.png" alt="로그인" class="lnb_icon">
+                    </a>
+                </li>
                 <li><a href="#">Find a store 
-                    <img src="./images/find.png" alt="매장검색" class="lnb_icon">
-                </a>
-            </li>
+                        <img src="./images/find.png" alt="매장검색" class="lnb_icon">
+                    </a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -87,10 +88,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#" class="sub_title">Store</a>
+                            <a href="./map.html" class="sub_title">Store</a>
                             <ul class="depth2">
-                                <li><a href="#">매장소개</a></li>
-                                <li><a href="#">매장찾기</a></li>
+                                <li><a href="./map.html">매장소개</a></li>
+                                <li><a href="./map.html">매장찾기</a></li>
                             </ul>
                         </li>
                         <li>
@@ -220,6 +221,13 @@
                 <a href="#"><img src="images/IN.png" alt="인스타그램아이콘"></a>
             </div>
         </footer>
+    </div>
+
+    <!-- 팝업창 -->
+    <div class="popup">
+        <div class="close_box">
+            <button id="btn_close">닫기</button>
+        </div>
     </div>
 </body>
 </html>
