--- a/menu.html
+++ b/menu.html
@@ -87,10 +87,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#" class="sub_title">Store</a>
+                            <a href="./map.html" class="sub_title">Store</a>
                             <ul class="depth2">
-                                <li><a href="#">매장소개</a></li>
-                                <li><a href="#">매장찾기</a></li>
+                                <li><a href="./map.html">매장소개</a></li>
+                                <li><a href="./map.html">매장찾기</a></li>
                             </ul>
                         </li>
                         <li>
@@ -116,7 +116,7 @@
 <nav id="navigation">
         <h2>커피　|</h2>
         <p>커피와 함께하는 특별한시간</p>
-        <span>Main &gt; Menu &gt; 커피</span>
+        <span>Menu &gt; 커피</span>
 </nav>
 
 <div id="contents">
