--- a/page.html
+++ b/page.html
@@ -87,10 +87,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#" class="sub_title">Store</a>
+                            <a href="./map.html" class="sub_title">Store</a>
                             <ul class="depth2">
-                                <li><a href="#">매장소개</a></li>
-                                <li><a href="#">매장찾기</a></li>
+                                <li><a href="./map.html">매장소개</a></li>
+                                <li><a href="./map.html">매장찾기</a></li>
                             </ul>
                         </li>
                         <li>
