--- a/map.html
+++ b/map.html
@@ -108,7 +108,7 @@
 	<nav id="navigation">
 		<h2>매장찾기　|</h2>
 		<p>가까운 카페베네를 찾아보세요</p>
-		<span>Caffebene &gt; 매장찾기</span>
+		<span>Store &gt; 매장찾기</span>
 	</nav>
 
     <div id="map_container">
